--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
 
             <!-- archievement logo -->
             <div class="space-y-12 my-16">
-                <div class="w-full flex border p-16 lg:px-32 lg:py-20 lg:space-x-32 bg-body">
+                <div class="w-full flex flex-wrap border p-16 lg:px-32 lg:py-20 lg:space-x-32 bg-body">
                     <!-- archievement logo -->
                     <div class="mb-6 lg-mb-0">
                         <img src="public/img/lks.png" alt="">
@@ -737,9 +737,9 @@
                 </div>
             </div>
             <div class="space-y-12 my-16">
-                <div class="w-full flex border p-16 lg:px-32 lg:py-20 lg:space-x-32 bg-body">
+                <div class="w-full flex flex-wrap border p-16 lg:px-32 lg:py-20 lg:space-x-32 bg-body">
                     <!-- archievement logo -->
-                    <div class="mb-6 lg-mb-0 w-1/2">
+                    <div class="mb-6 lg-mb-0 w-full md:w-1/2">
                         <img src="public/img/dinacom.jpg">
                     </div>
                     <!-- archievement info -->
