--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="mb-10 relative">
         <div class="antialiased dark-mode:bg-gray-900">
             <div class="w-full text-white dark-mode:text-gray-200 dark-mode:bg-gray-800">
-                <div x-data="{ open: true }"
+                <div x-data="{ open: false }"
                     class="flex flex-col max-w-screen-xl px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
                     <div class="flex flex-row items-center justify-between p-4">
                         <!-- <a href="#" class="text- font-semibold tracking-widest text-white uppercase rounded-lg dark-mode:text-white focus:outline-none focus:shadow-outline">Bilal.</a> -->
