--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portofolio</title>
+
     <link rel="stylesheet" href="public/css/tailwind.css">
     <link rel="stylesheet" href="public/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
 
 <body class="bg-body text-white font-poppins pb-12 scrollbar" id="style-11">
     <!-- header -->
 
+    <!-- navbar -->
     <div class="mb-0 md:mb-10 relative">
         <div class="antialiased dark-mode:bg-gray-900">
             <div class="w-full text-white dark-mode:text-gray-200 dark-mode:bg-gray-800">
@@ -59,7 +64,8 @@
 
     <div class="container flex justify-between items-center mx-auto">
         <div class="flex flex-wrap-reverse md:flex-nowrap">
-            <nav class="inline-block lg:mr-24 lg:w-4 fixed left-precentage hidden xl:block">
+            <!-- item left -->
+            <nav class="inline-block lg:mr-24 lg:w-4 fixed left-precentage hidden xl:block" data-aos="fade-right" data-aos-duration="1000">
                 <div class="absolute left-50 transform -translate-x-1/2 space-y-6 mt-20 ml-8">
                     <a href="#" class="nav-dot selected-circle block w-7 h-7 rounded-full border-4 border-nav bg-body">
                         <span class="bg-black px-2 py-1 rounded-md ml-10 opacity-0">Home</span>
@@ -76,11 +82,12 @@
                 </div>
             </nav>
 
-            <div class="relative flex flex-wrap lg:ml-20 justify-center md:justify-start max-w-xl mt-0 md:my-36">
+            <div class="relative flex flex-wrap lg:ml-20 justify-center md:justify-start max-w-xl mt-0 md:my-36" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
                 <div class="circle w-1/2 h-1/2 max-w-2xl rounded-full absolute z-1"></div>
-                <h1 class="font-bold text-5xl md:text-6xl lg:text-7xl text-center md:text-left mt-10 md:mt-0">Building <br> Beautifull
+                <h1 class="font-bold text-5xl md:text-6xl lg:text-7xl text-center md:text-left mt-10 md:mt-0">Building
+                    <br> Beautifull
                     web experiences.</h1>
-                <button class="px-8 py-2 bg-theme text-white font-bold mt-12 items-center flex gap-x-2">
+                <a class="px-8 py-2 bg-theme text-white font-bold mt-12 items-center flex gap-x-2" href="#project">
                     <span>My Projects.</span>
                     <div>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="25" fill="currentColor"
@@ -89,23 +96,25 @@
                                 d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z" />
                         </svg>
                     </div>
-                </button>
+                </a>
             </div>
             <!-- mobile -->
-            <img src="public/img/profile.webp" class="block md:hidden w-full md:w-1/2 md:h-2/5">
+            <img src="public/img/profile.webp" class="block md:hidden w-full md:w-1/2 md:h-2/5" data-aos="fade-right" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
         </div>
-        <img src="public/img/profile.webp" class="hidden md:block w-full md:w-1/2 md:h-2/5 mt-8">
+        <!-- dekstop -->
+        <img src="public/img/profile.webp" class="hidden md:block w-full md:w-1/2 md:h-2/5 mt-8" data-aos="fade-left">
     </div>
 
     <!-- project -->
-    <div class="container relative mt-20 md:mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+    <div
+        class="container relative mt-20 md:mt-52 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full" data-aos="fade-up">
         <section class="w-full">
             <div class="hidden md:block circle circle-2 absolute z-1"></div>
             <h2 class="secondary-title" id="project">My Projects</h2>
             <p class="section-paragraph">I have several projects that I have worked on during my time as a programmer,
                 designing and implementing a website, becoming a data science</p>
             <!-- web -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6" data-aos="fade-up" data-aos-duration="1000">
                 <div class="w-full px-4 text-black">
                     <div class="bg-white rounded-lg overflow-hidden mb-10">
                         <img src="public/img/besmarLanding.webp" alt="image" class="w-full" />
@@ -271,8 +280,8 @@
                 </div>
             </div>
             <!-- android -->
-            <p class="text-xl font-bold">Android</p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+            <p class="text-xl font-bold" data-aos="fade-up" data-aos-duration="1000">Android</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6" data-aos="fade-up" data-aos-duration="1000">
                 <div class="w-full px-4 text-black">
                     <div class="bg-white rounded-lg overflow-hidden mb-10">
                         <img src="public/img/besmartAndroid.webp" alt="image" class="w-full shadow-xl" />
@@ -348,8 +357,8 @@
             </div>
 
             <!-- data science -->
-            <p class="text-xl font-bold">Data Science</p>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6   ">
+            <p class="text-xl font-bold" data-aos="fade-up" data-aos-duration="1000">Data Science</p>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6" data-aos="fade-up" data-aos-duration="1000">
                 <div class="w-full px-4 text-black">
                     <div class="bg-white rounded-lg overflow-hidden mb-10">
                         <img src="public/img/covid.webp" alt="image" class="w-full" />
@@ -534,7 +543,7 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                i grouped some of my classmate values by using clustering with kmeans method 
+                                i grouped some of my classmate values by using clustering with kmeans method
                             </p>
                             <div class="flex justify-center">
                                 <a href="https://colab.research.google.com/drive/1EvZezUShOoJDgZOz7cDiTZjiu6n6k7r8#scrollTo=996CY7ePxru2"
@@ -566,7 +575,7 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                I grouped a dataset containing about irises by using clustering with the kmeans method  
+                                I grouped a dataset containing about irises by using clustering with the kmeans method
                             </p>
                             <div class="flex justify-center">
                                 <a href="https://colab.research.google.com/drive/1EvZezUShOoJDgZOz7cDiTZjiu6n6k7r8#scrollTo=996CY7ePxru2"
@@ -598,7 +607,8 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                I have created a program to determine the type of iris using SVM and I got a score <b>test of 97% and train 99%.</b>     
+                                I have created a program to determine the type of iris using SVM and I got a score
+                                <b>test of 97% and train 99%.</b>
                             </p>
                             <div class="flex justify-center">
                                 <a href="https://colab.research.google.com/drive/1TKNmWY_1IYWBm7HnIzTHKhV6I8aaQgSr#scrollTo=tRwP9vcgF7eK"
@@ -630,7 +640,8 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                with the wheater australia dataset I will predict the weather in the next year, here I get <b>90% accuracy</b>  
+                                with the wheater australia dataset I will predict the weather in the next year, here I
+                                get <b>90% accuracy</b>
                             </p>
                             <div class="flex justify-center">
                                 <a href="https://colab.research.google.com/drive/172pckXzs-l4wi2lK2ekTO6GvUpPyOGVj"
@@ -662,7 +673,8 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                I created a program to detect including what kind of penguins, and here I get a score for the data <b>train of 99% and 100% for the test data</b>  
+                                I created a program to detect including what kind of penguins, and here I get a score
+                                for the data <b>train of 99% and 100% for the test data</b>
                             </p>
                             <div class="flex justify-center">
                                 <a href="https://colab.research.google.com/drive/1BRTb4e74zry3W7sTJQePbXFhUTWF6taU"
@@ -694,7 +706,9 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                I created a program to predict the price of a house in Boston housing according to some of the conditions that affect the price of a housing. And here I get <b> 96% data train accuracy and 91% test data</b> 
+                                I created a program to predict the price of a house in Boston housing according to some
+                                of the conditions that affect the price of a housing. And here I get <b> 96% data train
+                                    accuracy and 91% test data</b>
                             </p>
                             <div class="flex justify-center">
                                 <a href="https://colab.research.google.com/drive/1cKwF1Dp7qtEU3YZV9eh25oi9nup45gzl"
@@ -712,14 +726,14 @@
 
 
     <!-- Archievement -->
-    <div class="container relative mt-10 md:mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+    <div
+        class="container relative mt-10 md:mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full" data-aos="fade-left" data-aos-duration="1000">
         <section class="w-full">
             <div class="circle circle-3 hidden md:block absolute z-1"></div>
             <h2 class="secondary-title" id="archievement">Archievement</h2>
             <p class="section-paragraph">During 3 years as a programmer I gained some achievements </p>
-
             <!-- archievement logo -->
-            <div class="space-y-12 my-16">
+            <div class="space-y-12 my-16" data-aos="fade-right" data-aos-duration="1000">
                 <div class="w-full flex flex-col md:flex-row border p-16 lg:px-32 lg:py-20 lg:space-x-32 bg-body">
                     <!-- archievement logo -->
                     <div class="mb-6 lg-mb-0">
@@ -737,7 +751,7 @@
                     </div>
                 </div>
             </div>
-            <div class="space-y-12 my-16">
+            <div class="space-y-12 my-16" data-aos="fade-left" data-aos-duration="1000">
                 <div class="w-full flex flex-col md:flex-row border p-16 lg:px-32 lg:py-20 lg:space-x-32 bg-body">
                     <!-- archievement logo -->
                     <div class="mb-6 lg-mb-0 w-full md:w-1/2">
@@ -758,7 +772,7 @@
     </div>
 
     <!-- hire me -->
-    <div class="container relative mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
+    <div class="container relative mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full" data-aos="zoom-in" data-aos-duration="1000">
         <section class="w-full">
             <div class="hidden md:block circle circle-2 absolute z-1"></div>
             <h2 id="hire" class="secondary-title">Hire me</h2>
@@ -844,6 +858,10 @@
     </div> -->
 
     <script src="public/js/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
