fix display mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 </head>
 
-<body class="bg-body text-white font-poppins pb-12 scrollbar" id="style-11">
+<body class="bg-body text-white font-poppins pb-12 scrollbar overflow-x-hidden" id="style-11">
     <!-- header -->
 
     <!-- navbar -->
@@ -62,6 +62,7 @@
         </div>
     </div>
 
+    <!-- header -->
     <div class="container flex justify-between items-center mx-auto">
         <div class="flex flex-wrap-reverse md:flex-nowrap">
             <!-- item left -->
@@ -84,9 +85,10 @@
 
             <div class="relative flex flex-wrap lg:ml-20 justify-center md:justify-start max-w-xl mt-0 md:my-36" data-aos="fade-up" data-aos-anchor-placement="bottom-bottom" data-aos-duration="1000">
                 <div class="circle w-1/2 h-1/2 max-w-2xl rounded-full absolute z-1"></div>
-                <h1 class="font-bold text-5xl md:text-6xl lg:text-7xl text-center md:text-left mt-10 md:mt-0">Building
-                    <br> Beautifull
-                    web experiences.</h1>
+                    <h1 class="font-bold text-5xl md:text-6xl lg:text-7xl text-center md:text-left mt-2 md:mt-0">Muhammad
+                    <br> Bilal
+                </h1>
+                <h2 class="text-lg font-semibold w-64 md:w-96 text-center md:text-left">I am a web developer who has been studying for 3 years, I'm 17 years old</h2>
                 <a class="px-8 py-2 bg-theme text-white font-bold mt-12 items-center flex gap-x-2" href="#project">
                     <span>My Projects.</span>
                     <div>
@@ -727,7 +729,7 @@
 
     <!-- Archievement -->
     <div
-        class="container relative mt-10 md:mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full" data-aos="fade-left" data-aos-duration="1000">
+        class="container relative mt-10 md:mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full" data-aos="fade-right" data-aos-duration="1000">
         <section class="w-full">
             <div class="circle circle-3 hidden md:block absolute z-1"></div>
             <h2 class="secondary-title" id="archievement">Archievement</h2>
