--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
                     <h1 class="font-bold text-5xl md:text-6xl lg:text-7xl text-center md:text-left mt-2 md:mt-0">Muhammad
                     <br> Bilal
                 </h1>
-                <h2 class="text-lg font-semibold w-64 md:w-96 text-center md:text-left">I am a web developer who has been studying for 3 years, I'm 17 years old</h2>
+                <h2 class="text-lg font-semibold w-64 md:w-96 text-center md:text-left mt-0 md:mt-5">
+                    I'am a Programmer learner since 2019
+                </h2>
                 <a class="px-8 py-2 bg-theme text-white font-bold mt-12 items-center flex gap-x-2" href="#project">
                     <span>My Projects.</span>
                     <div>
@@ -113,8 +115,7 @@
         <section class="w-full">
             <div class="hidden md:block circle circle-2 absolute z-1"></div>
             <h2 class="secondary-title" id="project">My Projects</h2>
-            <p class="section-paragraph">I have several projects that I have worked on during my time as a programmer,
-                designing and implementing a website, becoming a data science</p>
+            <p class="section-paragraph">I did several projects during my spare times.</p>
             <!-- web -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6" data-aos="fade-up" data-aos-duration="1000">
                 <div class="w-full px-4 text-black">
@@ -138,8 +139,7 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                Besmart is a learning and teaching application that can make it easier for students and
-                                teachers to do learning and teaching activities in this era of the COVID-19 pandemic.
+                                A learning platform made to enhance students and teachers doing their activities in this era of the COVID-19 pandemic.
                             </p>
                             <div class="flex flex-wrap gap-1">
                                 <a href=""
@@ -173,7 +173,7 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-12">
-                                e bimble is made to make it easier for bible owners to process data on students and
+                                e bimble is made to make it easier for Database management system enhancement for users to process data on students and
                                 teachers who are learning and teaching, which is used to collect data
                             </p>
                             <div class="flex pb-1 gap-1">
@@ -206,9 +206,7 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                This application is used to make it easier for coffee seller owners to make it easier to
-                                promote their stores and make it easier for customers to know information about the
-                                coffee shop.
+                                Enhances coffee shops to perform business marketing and make it easier for customers to find suitable coffee shops.
                             </p>
                             <div class="mb-2">
                                 <a href=""
@@ -413,10 +411,7 @@
                                     Titanic
                                 </a>
                             </h3>
-                            <p class="text-base text-body-color leading-relaxed mb-5">
-                                Here I will predict what kind of passengers are likely to be safe, I use SVM and get a
-                                <b>64% result </b> and then I use the search grid so that I get a <b>score of 100%</b>
-                            </p>
+                            <p class="text-base text-body-color leading-relaxed mb-5">Click to find out about how to boost machine learning accuracy, even with similar methods!</p>
                             <div class="flex justify-center">
                                 <a href="https://colab.research.google.com/drive/1pFptTxQERSteVQT4qF1Fqhrb_tDW-z-B#scrollTo=996CY7ePxru2"
                                     target="_blank"
@@ -450,7 +445,7 @@
                                 I created a program to quickly trace images by using the python programming language
                             </p>
                             <div class="flex justify-center">
-                                <a href="https://colab.research.google.com/drive/1EvZezUShOoJDgZOz7cDiTZjiu6n6k7r8#scrollTo=996CY7ePxru2"
+                                <a href=""
                                     target="_blank"
                                     class="px-3 py-1.5 transition transform motion-reduce:transition-none motion-reduce:hover:transform-none hover:-translate-y-1 rounded-full border border-black font-medium text-sm  hover:scale-110  hover:bg-theme hover:border-theme hover:text-white ">View
                                     Project</a>
@@ -545,7 +540,7 @@
                                 </a>
                             </h3>
                             <p class="text-base text-body-color leading-relaxed mb-5">
-                                i grouped some of my classmate values by using clustering with kmeans method
+                                By K-means, I clustered my classmates's academic performance just for fun! Hahaha!
                             </p>
                             <div class="flex justify-center">
                                 <a href="https://colab.research.google.com/drive/1EvZezUShOoJDgZOz7cDiTZjiu6n6k7r8#scrollTo=996CY7ePxru2"
@@ -641,10 +636,7 @@
                                     Wheater Aus
                                 </a>
                             </h3>
-                            <p class="text-base text-body-color leading-relaxed mb-5">
-                                with the wheater australia dataset I will predict the weather in the next year, here I
-                                get <b>90% accuracy</b>
-                            </p>
+                            <p class="text-base text-body-color leading-relaxed mb-5">I predicted the weather in Australia, up to a year ahead. Got 90% accuracy!</p>
                             <div class="flex justify-center">
                                 <a href="https://colab.research.google.com/drive/172pckXzs-l4wi2lK2ekTO6GvUpPyOGVj"
                                     target="_blank"
@@ -733,7 +725,9 @@
         <section class="w-full">
             <div class="circle circle-3 hidden md:block absolute z-1"></div>
             <h2 class="secondary-title" id="archievement">Archievement</h2>
-            <p class="section-paragraph">During 3 years as a programmer I gained some achievements </p>
+            <p class="section-paragraph">
+                I got achievements during become a programmer.
+            </p>
             <!-- archievement logo -->
             <div class="space-y-12 my-16" data-aos="fade-right" data-aos-duration="1000">
                 <div class="w-full flex flex-col md:flex-row border p-16 lg:px-32 lg:py-20 lg:space-x-32 bg-body">
